--- a/css/style.css
+++ b/css/style.css
@@ -2660,14 +2660,14 @@ top: 0px;
 width: 100%;
 height: 100%;
 z-index: 99999;
-background: url('../images/page-loader.gif') 50% 50% no-repeat rgb(249,249,249);
+background: url('../src/images/page-loader.gif') 50% 50% no-repeat rgb(249,249,249);
 }
 
 .page-overlay {
 display:none;
 width: 120px;
 height: 120px;
-background:url(../images/page-loader.gif) center no-repeat #fff;
+background:url(../src/images/page-loader.gif) center no-repeat #fff;
 border-radius:10px;
 position: fixed;
 top:0;
