--- a/css/animate.css
+++ b/css/animate.css
@@ -91,6 +91,7 @@ Copyright (c) 2013 Daniel Eden
   animation-name: flash;
 }
 
+/* originally authored by Nick Pettit - https://github.com/nickpettit/glide */
 
 @-webkit-keyframes pulse {
   0% {
